<resources>
    <string name="app_name">Floating View Example</string>
    <string name="MAIN_CHANNEL_ID">STATUS_BAR</string>
    <string name="INTENT_START_FROM_NOTIFY">INTENT_START_FROM_NOTIFY</string>
    <string name="notification_content">Click to show Application</string>

    <string name="button_floating_view">Floating\nButton\nExample</string>

    <string name="button_start_floating_button">Start Floating Button</string>
    <string name="text_floating_button_clicked">"FloatingButton clicked :"</string>
    <string name="text_zero_times">0 times</string>
    <plurals name="text_num_times">
        <item quantity="one">%d time</item>
        <item quantity="other">%d times</item>
    </plurals>

    <string name="button_start_floating_info">Start Floating Info</string>
    <string name="edit_text_hint_title">Title for Floating Info</string>
    <string name="text_floating_info_title">Floating Info Example</string>
    <string name="edit_text_hint_info_text">Text for Floating Info</string>
    <string name="text_floating_info_text">Tap to return to MainActivity.\nSwipe left or right to dismiss.</string>

    <string name="menu_show_main">Show Main Screen</string>
    <string name="menu_exit">Exit</string>


    <string name="dialog_title_accept_permission">Please accept permission</string>
    <string name="dialog_content_need_draw_overlay_permission">This application needs [DrawOverlay] permission in order to run.</string>
    <string name="error_open_manage_overlay_permission_failed">Unable to redirect you to the Applications Permissions Page\n Please enable \'Draw over other apps\' from Applications Page.</string>
    <string name="button_open_applications_page">Open Applications page</string>
    <string name="button_close">Close</string>
    <string name="button_exit_app">Exit Application</string>
    <string name="button_settings">Settings</string>
    <string name="error">ERROR</string>
</resources>
