<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_floating_button_clicked" />

                <TextView
                    android:id="@+id/text_num_button_clicks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/text_zero_times" />
            </LinearLayout>

            <Button
                android:id="@+id/button_start_floating_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/button_start_floating_button"
                android:theme="@style/MainButton" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_floating_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="64dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/layout_floating_button"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_hint_title" />

            <EditText
                android:id="@+id/edit_text_floating_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_hint_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text="@string/text_floating_info_title"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_text_hint_info_text" />

            <EditText
                android:id="@+id/edit_text_floating_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_hint_info_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:text="@string/text_floating_info_text"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button_start_floating_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/button_start_floating_info" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>